Minor cleanup based on PR feedback